--- a/3_exercise.ipynb
+++ b/3_exercise.ipynb
@@ -18,12 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -39,12 +41,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.zeros(10)\n",
+    "arr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,12 +76,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.ones(10)\n",
+    "arr1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,12 +112,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 3, 3, 3, 3, 3, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# solution 1\n",
+    "arr3 = np.ones(10)*3\n",
+    "arr3\n",
+    "\n",
+    "# solution 2\n",
+    "arr3a = np.full((10),3)\n",
+    "arr3a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -104,12 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36,\n",
+       "       37, 38, 39, 40])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr4 = np.arange(20,40+1)\n",
+    "arr4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -125,12 +189,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr5 = np.arange(20,41,2)\n",
+    "arr5"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,12 +226,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5],\n",
+       "       [6, 7, 8]])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat1 = np.array([[0,1,2], [3,4,5], [6,7,8]])\n",
+    "mat1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,12 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat2 = np.eye(3)\n",
+    "mat2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,12 +290,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5265839882039117"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand1 = np.random.random()\n",
+    "rand1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,12 +320,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.0843834 , 0.26696135, 0.96714047, 0.75827732, 0.09195205,\n",
+       "       0.82041904, 0.54007615, 0.48092815, 0.40696396, 0.55007893,\n",
+       "       0.25807201, 0.99225026, 0.45320092, 0.54745468, 0.85889742,\n",
+       "       0.16868449, 0.17793013, 0.91142465, 0.74259325, 0.90965266])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rarr = np.random.random(20)\n",
+    "rarr"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -212,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -232,12 +373,15 @@
        "       [0.91, 0.92, 0.93, 0.94, 0.95, 0.96, 0.97, 0.98, 0.99, 1.  ]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "mat2d = np.linspace(0.01, 1, 100).reshape(10,10)\n",
+    "mat2d"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -289,12 +433,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[31, 32, 33, 34],\n",
+       "       [36, 37, 38, 39],\n",
+       "       [41, 42, 43, 44]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[1:4, 1:]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,12 +473,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[27],\n",
+       "       [32],\n",
+       "       [37],\n",
+       "       [42],\n",
+       "       [47]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[:, 2].reshape(5,1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,12 +511,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([41, 42, 43])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[3, 1:-1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -357,12 +546,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[32, 33],\n",
+       "       [37, 38]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat[1:3, 2:4]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,12 +583,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(925)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# method - 1\n",
+    "mat.sum()\n",
+    "\n",
+    "#method 2\n",
+    "np.sum(mat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -396,12 +616,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(7.211102550927978)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mat.std()\n",
+    "np.std(mat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -413,12 +647,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([175, 180, 185, 190, 195])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(mat,axis=0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -432,7 +679,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml_env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -446,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
